# python-sdk

./: .gitignore  flake.nix  mypy.ini  pyproject.toml
.github/workflows/: deploy_docs.yml  example.yml
docs/: golem_base_sdk.html  index.html  search.js
docs/golem_base_sdk/: constants.html  types.html  utils.html
example/: .envrc  .uv-links  flake.nix  pyproject.toml
example/golem_base_sdk_example/: __init__.py  main.py
example/nix/: devshell.nix
golem_base_sdk/: __init__.py  constants.py  types.py  utils.py
nix/: devshell.nix
