[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "golem-base-sdk-example"
authors = [
    {name = "Ramses", email = "ramses@well-founded.dev"},
]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.5"
dynamic = ["version", "description"]

dependencies = [
  "web3",
  "pyxdg",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "ASYNC",
    "PL",
    "D"
]
ignore = [
  "D203",
  "D212"
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
main = "golem_base_sdk_example:main"
